--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -235,7 +235,7 @@
         "    remainder = a % b #\n",
         "    print(\"{} = {} ({}) + {}\".format(a,quotient,b,remainder))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +582,7 @@
         "print(\"6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \\n--> For example, a function that uses Machin's method for pi where an input value is not needed and would be \\ndisregarded entirely.\")\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +710,7 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +725,7 @@
       "source": [
         "is_even(17)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +767,7 @@
         "            return False\n",
         "    return True"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,7 +791,7 @@
       "source": [
         "is_prime(91)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,7 +824,7 @@
       "source": [
         "is_prime(101)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,7 +863,7 @@
         "print(\"--> 5 digit number 12347 is prime? {}\".format(is_prime(12347)))\n",
         "print(\"--> 6 digit number 123459 is prime? {}\".format(is_prime(123459)))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,13 +912,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "l5IQH9hxuXds",
-        "outputId": "d4cf3ddf-7530-4a4f-de4c-f8c1f11d62d6",
+        "outputId": "f23f7ed5-412f-4574-e481-4917d88575c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "#  Use this space for your solutions to the questions.\n",
+        "from numpy import log\n",
         "\n",
         "def my_abs(x):\n",
         "  if x < 0:\n",
@@ -968,7 +969,7 @@
         "  x2 = y2 = 0\n",
         "  for i in range(n):\n",
         "    x2 = n-(i+1)\n",
-        "    if sqrt(x2)%1 == 0:\n",
+        "    if mp.sqrt(x2)%1 == 0:\n",
         "      y2 = (i+1)\n",
         "      if sqrt(y2)%1 == 0:\n",
         "        return int(sqrt(x2)), int(sqrt(y2))\n",
@@ -984,13 +985,18 @@
         "else:\n",
         "  print(\"4. There are no values of x and y such that x^2+y^2={}.\".format(input))\n",
         "\n",
-        "\n",
-        "print(\"5.\")\n",
+        "def gamma(n):\n",
+        "  harmonic_sum = 0\n",
+        "  for i in range(n):\n",
+        "    harmonic_sum += 1/(i+1)\n",
+        "  return harmonic_sum\n",
+        "input = 2\n",
+        "print(\"5. The value of (harmonic_series({}) - log({})) is {}\".format(input, input, gamma(input)-log(input)))\n",
         "\n",
         "\n",
         "\n"
       ],
-      "execution_count": 85,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1006,7 @@
             "2. Number is too big\n",
             "3. 31 is throdd. 44 is thrugly. 60 is threeven\n",
             "4. The values of (x, y) for x^2+y^2=10 are (3, 1)\n",
-            "5.\n"
+            "5. The value of (harmonic_series(2) - log(2)) is 0.8068528194400547\n"
           ]
         }
       ]
