--- a/Classwork_1_31_23.ipynb
+++ b/Classwork_1_31_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIrbWvpbHaQ+RhrshBtk4d",
+      "authorship_tag": "ABX9TyMpcV6B3Fr6pFJX0tqL2hQ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,10 @@
         "    t=t+1 #incrementing safety - less than maximum instructions\n",
         "  return p\n",
         "\n",
+        "\n",
+        "#Project 1 Group --> sign up on canvas\n",
+        "#NB 1 graded now/soon\n",
+        "#midterm next Thursday -- closed computer closed book - only paper and pen\n",
         "\n",
         "\n",
         "\n",
