--- a/Classwork_2_1_23.ipynb
+++ b/Classwork_2_1_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwsM4UGp9MlcjPubvKq/w8",
+      "authorship_tag": "ABX9TyOciG1Ynk6Zn0bidTzvUAsB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,22 @@
         "id": "ke4rdm6D2Mtu"
       },
       "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Fib_professors_version(n):\n",
+        "  a=0\n",
+        "  b=1\n",
+        "  while b<n:\n",
+        "    print(b)\n",
+        "    a, b = b, a+b"
+      ],
+      "metadata": {
+        "id": "i4bJN_JF-sj3"
+      },
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -158,6 +174,39 @@
             "365435296162\n",
             "591286729879\n",
             "956722026041\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Fib_professors_version(100)"
+      ],
+      "metadata": {
+        "id": "KVqwWNbq-8CK",
+        "outputId": "6ce1fd1c-e3e9-4a8d-ec8b-ff9daa7144a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n",
+            "89\n"
           ]
         }
       ]
