--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -639,13 +639,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ki1TLpgcuXdq"
+        "id": "Ki1TLpgcuXdq",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "f4ff8981-1cb4-48b7-b5a8-ef2565922ee5"
       },
       "source": [
         "is_even(17)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-4ab9ddd65e86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mis_even\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'is_even' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -710,14 +727,14 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "qJVILvBfuXdr",
-        "outputId": "eb9129e5-916c-47e2-8c96-6de166086f17",
+        "outputId": "4cff7ab9-0c4b-42a5-dd69-299f7f16a4c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -725,7 +742,7 @@
       "source": [
         "is_even(17)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,7 +752,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -996,7 +1013,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,30 +1048,60 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9N-eMKduuXds"
+        "id": "9N-eMKduuXds",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "54db2fed-6326-41d6-8a82-12e130b66f15"
       },
       "source": [
         "is_even(3.14)  # What will this do?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rmVWWIM9uXds"
+        "id": "rmVWWIM9uXds",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cab29c1b-9293-4b0d-9190-65f7d3a03309"
       },
       "source": [
         "3.14%2  # Well, this explains it!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.1400000000000001"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1078,41 +1125,81 @@
         "        print(\"Bad input!  Please input integers only.\")\n",
         "        return None"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2KZBZWcHuXdt"
+        "id": "2KZBZWcHuXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f784e6e4-fcf7-454c-883f-cbafdab0eed3"
       },
       "source": [
         "is_even(4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mm0Hn7LWuXdt"
+        "id": "Mm0Hn7LWuXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24e36b79-9150-4998-8fcf-abc670433b70"
       },
       "source": [
         "is_even(3.14)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bad input!  Please input integers only.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NBOviOZruXdt"
+        "id": "NBOviOZruXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3495a514-9477-4c00-e1fb-60fd2945ab24"
       },
       "source": [
         "print(is_even(3.14))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bad input!  Please input integers only.\n",
+            "None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1126,13 +1213,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bYi3Vy4duXdt"
+        "id": "bYi3Vy4duXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e540825-3efd-4414-d651-cee5a74a5e9f"
       },
       "source": [
         "type(None) # A zen command."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NoneType"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1153,32 +1255,65 @@
         "    if type(n) == int:\n",
         "        return (n%2 == 0)\n",
         "    else:\n",
-        "        raise TypeError('Only integers can be even or odd.')"
+        "        raise TypeError('Only integers can be even or odd.')  #error code"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "49h2r4O3uXdt"
+        "id": "49h2r4O3uXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1fcfdcc5-72dd-4a55-e644-5779c7478b8c"
       },
       "source": [
         "is_even(3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iOw7QU5DuXdt"
+        "id": "iOw7QU5DuXdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 249
+        },
+        "outputId": "ce3accb8-19d6-497a-c124-3db1717a0395"
       },
       "source": [
         "is_even(3.14)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-24ec50760f46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mis_even\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.14\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-19-7ce533cf2232>\u001b[0m in \u001b[0;36mis_even\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Only integers can be even or odd.'\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#error code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: Only integers can be even or odd."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1210,31 +1345,64 @@
         "            return new_guess\n",
         "        guess = new_guess"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0uwvsrDNuXdu"
+        "id": "0uwvsrDNuXdu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5cb320e-09ed-471e-f680-6df2b7a01748"
       },
       "source": [
         "sqrt(3) # This should be ok."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.7320508075688772"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "DpBaST5WuXdu"
+        "id": "DpBaST5WuXdu",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 283
+        },
+        "outputId": "f82fc34f-d7c7-4b83-f16e-f22ac1b68f4a"
       },
       "source": [
         "sqrt(-3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-30-8be5c01c52c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-28-39991b3bf836>\u001b[0m in \u001b[0;36msqrt\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      4\u001b[0m     '''\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cannot approximate square root of negative numbers.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mguess\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;31m# A decent place to start\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# A dangerous loop!  See next section...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Cannot approximate square root of negative numbers."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1261,13 +1429,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yqQ_3oVTuXdu"
+        "id": "yqQ_3oVTuXdu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f44e934e-66d2-4096-8e70-e54e2318442a"
       },
       "source": [
-        "# Use this space to work on exercises."
+        "# Use this space to work on exercises.\n",
+        "def divide(a, b):\n",
+        "  if b == 0:\n",
+        "    raise ZeroDivisionError(\"You cannot divide any number by zero.\")\n",
+        "  return (a/b)\n",
+        "\n",
+        "input_a = 1 #a value numerator\n",
+        "input_b = 1 #b value denominator\n",
+        "\n",
+        "print(\"1. {} divided by {} is {}.\".format(input_a, input_b, divide(input_a, input_b)))\n",
+        "\n",
+        "def is_prime(n):\n",
+        "  if type(n) == int:\n",
+        "    if n > 100000000: #modified section\n",
+        "      print(\"Number is too big\")\n",
+        "      return None\n",
+        "    else: \n",
+        "      for j in range(2,n):  # the list of numbers 2,3,...,n-1.\n",
+        "        if n%j == 0:  # is n divisible by j?\n",
+        "          print(\"{} is a factor of {}.\".format(j,n))\n",
+        "          return False\n",
+        "        return True\n",
+        "  else:\n",
+        "    raise ValueError(\"Input must be an integer.\")\n",
+        "\n",
+        "number_to_check = 3 #number to check if prime\n",
+        "\n",
+        "print(\"2. Check if {} is prime. --> {}.\".format(number_to_check, is_prime(number_to_check)))\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. 1 divided by 1 is 1.0.\n",
+            "2. Check if 3 is prime. --> True.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
