--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -649,7 +649,7 @@
       "source": [
         "is_even(17)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -727,7 +727,7 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +742,7 @@
       "source": [
         "is_even(17)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1063,7 +1063,7 @@
       "source": [
         "is_even(3.14)  # What will this do?"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1089,7 @@
       "source": [
         "3.14%2  # Well, this explains it!"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1125,7 +1125,7 @@
         "        print(\"Bad input!  Please input integers only.\")\n",
         "        return None"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1140,7 +1140,7 @@
       "source": [
         "is_even(4)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1166,7 +1166,7 @@
       "source": [
         "is_even(3.14)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1189,7 @@
       "source": [
         "print(is_even(3.14))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,7 +1222,7 @@
       "source": [
         "type(None) # A zen command."
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1257,7 +1257,7 @@
         "    else:\n",
         "        raise TypeError('Only integers can be even or odd.')  #error code"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1272,7 +1272,7 @@
       "source": [
         "is_even(3)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1299,7 +1299,7 @@
       "source": [
         "is_even(3.14)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1345,7 +1345,7 @@
         "            return new_guess\n",
         "        guess = new_guess"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1360,7 +1360,7 @@
       "source": [
         "sqrt(3) # This should be ok."
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1388,7 +1388,7 @@
       "source": [
         "sqrt(-3)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1466,7 +1466,7 @@
         "print(\"2. Check if {} is prime. --> {}.\".format(number_to_check, is_prime(number_to_check)))\n",
         "\n"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,19 +1509,41 @@
         "        current_value = current_value - 1\n",
         "    print(\"Blastoff!\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vqtBFRjYuXdw"
+        "id": "vqtBFRjYuXdw",
+        "outputId": "e4ecb0eb-ff66-447d-ca91-7a25e3d153f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "countdown(10)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "Blastoff!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1588,30 +1610,78 @@
         "        dividend = divisor  \n",
         "        divisor = remainder"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N1atLqX-uXdw"
+        "id": "N1atLqX-uXdw",
+        "outputId": "469649b3-1308-4db0-93aa-488f3ccd4f85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "Euclidean_algorithm(133, 58)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "133 = 2 (58) + 17\n",
+            "58 = 3 (17) + 7\n",
+            "17 = 2 (7) + 3\n",
+            "7 = 2 (3) + 1\n",
+            "3 = 3 (1) + 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Ha1idXQuXdw"
+        "id": "2Ha1idXQuXdw",
+        "outputId": "1741b1fa-8305-425a-d0cd-513f54a7983c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "Euclidean_algorithm(1312331323, 58123123)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1312331323 = 22 (58123123) + 33622617\n",
+            "58123123 = 1 (33622617) + 24500506\n",
+            "33622617 = 1 (24500506) + 9122111\n",
+            "24500506 = 2 (9122111) + 6256284\n",
+            "9122111 = 1 (6256284) + 2865827\n",
+            "6256284 = 2 (2865827) + 524630\n",
+            "2865827 = 5 (524630) + 242677\n",
+            "524630 = 2 (242677) + 39276\n",
+            "242677 = 6 (39276) + 7021\n",
+            "39276 = 5 (7021) + 4171\n",
+            "7021 = 1 (4171) + 2850\n",
+            "4171 = 1 (2850) + 1321\n",
+            "2850 = 2 (1321) + 208\n",
+            "1321 = 6 (208) + 73\n",
+            "208 = 2 (73) + 62\n",
+            "73 = 1 (62) + 11\n",
+            "62 = 5 (11) + 7\n",
+            "11 = 1 (7) + 4\n",
+            "7 = 1 (4) + 3\n",
+            "4 = 1 (3) + 1\n",
+            "3 = 3 (1) + 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1638,7 +1708,7 @@
         "        divisor = remainder\n",
         "    return abs(dividend)  #  abs() is used, since we like our GCDs to be positive."
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1653,24 +1723,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3O3UOceWuXdx"
+        "id": "3O3UOceWuXdx",
+        "outputId": "9e0692a8-ffcb-449e-e3d8-b353a7c91b74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "GCD(111,27)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "trzxn7cvuXdx"
+        "id": "trzxn7cvuXdx",
+        "outputId": "59d542fa-7bc0-497a-bfba-06ecdc35a11c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "GCD(111,-27)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1708,7 +1808,7 @@
       "source": [
         "x,y = 2,3  # Sets x to 2 and y to 3."
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1728,20 +1828,33 @@
       "source": [
         "x,y = y,x #  Guess what this does!"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mi80uo4uuXdx"
+        "id": "mi80uo4uuXdx",
+        "outputId": "6f80193a-be67-4d69-f175-11166913bca5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(\"x =\",x) # One could use \"x = {}\".format(x) too.\n",
         "print(\"y =\",y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 3\n",
+            "y = 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1869,13 +1982,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XLVsDlQEuXdy"
+        "id": "XLVsDlQEuXdy",
+        "outputId": "c586212d-277a-4124-8ebe-90168935fd3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Use this space to work on the exercises.\n"
+        "# Use this space to work on the exercises.\n",
+        "print(\"1.\")\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
