--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -1516,10 +1516,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vqtBFRjYuXdw",
-        "outputId": "e4ecb0eb-ff66-447d-ca91-7a25e3d153f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4ecb0eb-ff66-447d-ca91-7a25e3d153f0"
       },
       "source": [
         "countdown(10)"
@@ -1617,10 +1617,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N1atLqX-uXdw",
-        "outputId": "469649b3-1308-4db0-93aa-488f3ccd4f85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "469649b3-1308-4db0-93aa-488f3ccd4f85"
       },
       "source": [
         "Euclidean_algorithm(133, 58)"
@@ -1644,10 +1644,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2Ha1idXQuXdw",
-        "outputId": "1741b1fa-8305-425a-d0cd-513f54a7983c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1741b1fa-8305-425a-d0cd-513f54a7983c"
       },
       "source": [
         "Euclidean_algorithm(1312331323, 58123123)"
@@ -1724,10 +1724,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3O3UOceWuXdx",
-        "outputId": "9e0692a8-ffcb-449e-e3d8-b353a7c91b74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9e0692a8-ffcb-449e-e3d8-b353a7c91b74"
       },
       "source": [
         "GCD(111,27)"
@@ -1750,10 +1750,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "trzxn7cvuXdx",
-        "outputId": "59d542fa-7bc0-497a-bfba-06ecdc35a11c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "59d542fa-7bc0-497a-bfba-06ecdc35a11c"
       },
       "source": [
         "GCD(111,-27)"
@@ -1835,10 +1835,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "mi80uo4uuXdx",
-        "outputId": "6f80193a-be67-4d69-f175-11166913bca5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f80193a-be67-4d69-f175-11166913bca5"
       },
       "source": [
         "print(\"x =\",x) # One could use \"x = {}\".format(x) too.\n",
@@ -1983,16 +1983,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "XLVsDlQEuXdy",
-        "outputId": "c586212d-277a-4124-8ebe-90168935fd3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77df57b0-f47c-440a-9bb0-cfce410c4c99"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
+        "\n",
+        "def is_prime(n):\n",
+        "  if type(n) == int:\n",
+        "    if n > 100000000: #modified section\n",
+        "      print(\"Number is too big\")\n",
+        "      return None\n",
+        "    else: \n",
+        "      j=2\n",
+        "      while j<n:  # the list of numbers 2,3,...,n-1.\n",
+        "        if n%j == 0:  # is n divisible by j?\n",
+        "          print(\"{} is a factor of {}.\".format(j,n))\n",
+        "          return False\n",
+        "          j = j+1\n",
+        "        return True\n",
+        "  else:\n",
+        "    raise ValueError(\"Input must be an integer.\")\n",
+        "\n",
+        "\n",
         "print(\"1.\")\n"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
