--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -1986,7 +1986,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77df57b0-f47c-440a-9bb0-cfce410c4c99"
+        "outputId": "ce55db6c-83df-45ce-8688-391df2eb77b4"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
@@ -2007,16 +2007,18 @@
         "  else:\n",
         "    raise ValueError(\"Input must be an integer.\")\n",
         "\n",
+        "number = 23\n",
+        "print(\"1. Is {} prime? --> {}\".format(number, is_prime(23)))\n",
         "\n",
-        "print(\"1.\")\n"
+        "\n"
       ],
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.\n"
+            "1. Is 23 prime? --> True\n"
           ]
         }
       ]
