--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -2010,6 +2010,18 @@
         "number = 23\n",
         "print(\"1. Is {} prime? --> {}\".format(number, is_prime(23)))\n",
         "\n",
+        "def Euclidean_algorithm(a,b):\n",
+        "    dividend = a\n",
+        "    divisor = b\n",
+        "    while divisor != 0:   # Recall that != means \"is not equal to\".\n",
+        "        quotient = dividend // divisor\n",
+        "        remainder = dividend % divisor\n",
+        "        print(\"{} = {} ({}) + {}\".format(dividend, quotient, divisor, remainder))\n",
+        "        dividend = divisor  \n",
+        "        divisor = remainder\n",
+        "\n",
+        "print(\"2. {}\".format(Euclidean_algorithm(321, 324)))\n",
+        "\n",
         "\n"
       ],
       "execution_count": 21,
