--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -1986,7 +1986,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce55db6c-83df-45ce-8688-391df2eb77b4"
+        "outputId": "fd860121-f6c1-4f78-c897-03cae0a36da7"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
@@ -2011,26 +2011,43 @@
         "print(\"1. Is {} prime? --> {}\".format(number, is_prime(23)))\n",
         "\n",
         "def Euclidean_algorithm(a,b):\n",
+        "    print(\"Euclidean algorithm:\")\n",
         "    dividend = a\n",
         "    divisor = b\n",
+        "    steps = 0\n",
         "    while divisor != 0:   # Recall that != means \"is not equal to\".\n",
         "        quotient = dividend // divisor\n",
         "        remainder = dividend % divisor\n",
         "        print(\"{} = {} ({}) + {}\".format(dividend, quotient, divisor, remainder))\n",
         "        dividend = divisor  \n",
         "        divisor = remainder\n",
+        "        steps += 1\n",
+        "    return steps\n",
+        "print()\n",
+        "print(\"\\n2. The number of steps is {}.\".format(Euclidean_algorithm(321, 123)))\n",
         "\n",
-        "print(\"2. {}\".format(Euclidean_algorithm(321, 324)))\n",
+        "print(\"3. \")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1. Is 23 prime? --> True\n"
+            "1. Is 23 prime? --> True\n",
+            "\n",
+            "Euclidean algorithm:\n",
+            "321 = 2 (123) + 75\n",
+            "123 = 1 (75) + 48\n",
+            "75 = 1 (48) + 27\n",
+            "48 = 1 (27) + 21\n",
+            "27 = 1 (21) + 6\n",
+            "21 = 3 (6) + 3\n",
+            "6 = 2 (3) + 0\n",
+            "\n",
+            "2. The number of steps is 7.\n"
           ]
         }
       ]
