--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -1937,19 +1937,35 @@
         "        a, b = b, a % b\n",
         "    return abs(a)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SP8md911uXdy"
+        "id": "SP8md911uXdy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a6c83b8-a8dc-44cc-d113-c3fd89d36e50"
       },
       "source": [
-        "# Try it out.  Try it on some big numbers and see how quick it runs!\n"
+        "# Try it out.  Try it on some big numbers and see how quick it runs!\n",
+        "GCD(987654321, 123456789)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1986,7 +2002,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd860121-f6c1-4f78-c897-03cae0a36da7"
+        "outputId": "9d914d72-4b6f-451b-fc22-d72209c8a40b"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
@@ -2026,11 +2042,26 @@
         "print()\n",
         "print(\"\\n2. The number of steps is {}.\".format(Euclidean_algorithm(321, 123)))\n",
         "\n",
-        "print(\"3. \")\n",
+        "def GCD(a,b):\n",
+        "    while b:   # I.e., while b != 0.\n",
+        "        a, b = b, a % b\n",
+        "    return abs(a)\n",
+        "\n",
+        "def LCM(a,b):\n",
+        "  if a != 0 and b != 0:\n",
+        "    return int((a*b)/GCD(a,b))\n",
+        "  else:\n",
+        "    return 0\n",
+        "\n",
+        "a = 21\n",
+        "b = 14\n",
+        "print(\"3. LCM of {} and {} is {}.\".format(a, b, LCM(a, b)))\n",
+        "\n",
+        "print(\"4.\")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 30,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -2047,7 +2078,9 @@
             "21 = 3 (6) + 3\n",
             "6 = 2 (3) + 0\n",
             "\n",
-            "2. The number of steps is 7.\n"
+            "2. The number of steps is 7.\n",
+            "3. LCM of 21 and 14 is 42.\n",
+            "4.\n"
           ]
         }
       ]
