--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -2002,7 +2002,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d914d72-4b6f-451b-fc22-d72209c8a40b"
+        "outputId": "e9074b4c-d595-40c1-d3a2-601e15596d76"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
@@ -2049,19 +2049,21 @@
         "\n",
         "def LCM(a,b):\n",
         "  if a != 0 and b != 0:\n",
-        "    return int((a*b)/GCD(a,b))\n",
+        "    return int(abs((a*b)/GCD(a,b)))\n",
         "  else:\n",
         "    return 0\n",
         "\n",
-        "a = 21\n",
+        "a = -21\n",
         "b = 14\n",
         "print(\"3. LCM of {} and {} is {}.\".format(a, b, LCM(a, b)))\n",
         "\n",
-        "print(\"4.\")\n",
+        "print(\"4. The GCD method functions properly, forcing any common divisor to be positive and does not break if either a or b are zero.\")\n",
+        "\n",
+        "print(\"5. \")\n",
         "\n",
         "\n"
       ],
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -2079,8 +2081,9 @@
             "6 = 2 (3) + 0\n",
             "\n",
             "2. The number of steps is 7.\n",
-            "3. LCM of 21 and 14 is 42.\n",
-            "4.\n"
+            "3. LCM of -21 and 14 is 42.\n",
+            "4. The GCD method functions properly, forcing any common divisor to be positive and does not break if either a or b are zero.\n",
+            "5. \n"
           ]
         }
       ]
