--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -2002,10 +2002,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e9074b4c-d595-40c1-d3a2-601e15596d76"
+        "outputId": "29d0505b-d0c5-4b42-a0a5-5d42f9f99647"
       },
       "source": [
         "# Use this space to work on the exercises.\n",
+        "from mpmath import *\n",
         "\n",
         "def is_prime(n):\n",
         "  if type(n) == int:\n",
@@ -2059,11 +2060,21 @@
         "\n",
         "print(\"4. The GCD method functions properly, forcing any common divisor to be positive and does not break if either a or b are zero.\")\n",
         "\n",
-        "print(\"5. \")\n",
         "\n",
-        "\n"
+        "N = 3\n",
+        "def approximate_e(n):\n",
+        "  j = 1\n",
+        "  if n < 1000:\n",
+        "    while j < n:\n",
+        "      j += 1\n",
+        "    mp.dps = j+1\n",
+        "    return (mp.e)\n",
+        "  else:\n",
+        "    print(\"n is too large!\")\n",
+        "\n",
+        "print(\"5. e approximated to {} decimal points --> {}\".format(N, approximate_e(N)))\n"
       ],
-      "execution_count": 52,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -2083,7 +2094,7 @@
             "2. The number of steps is 7.\n",
             "3. LCM of -21 and 14 is 42.\n",
             "4. The GCD method functions properly, forcing any common divisor to be positive and does not break if either a or b are zero.\n",
-            "5. \n"
+            "5. e approximated to 3 decimal points --> 2.718\n"
           ]
         }
       ]
